--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "start:dev": "nodemon server.js",
+    "start:dev": "(npm run dev --prefix client) & nodemon server.js",
+    "build": "npm install --prefix client && npm run build --prefix client ",
     "seed": "node db/seed.js"
   },
   "author": "",
